cookbooks/olympus/hestia/info_works/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "info-flows"
  labels:
    app.kubernetes.io/instance: "info-flows"
    app.kubernetes.io/name: "info-flows"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "info-flows"
      app.kubernetes.io/instance: "info-flows"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "info-flows"
        app.kubernetes.io/instance: "info-flows"
    spec:
      imagePullSecrets:
        - name: zeus-fyi-ext
      containers:
        - name: "info-flows"
          image: "registry.digitalocean.com/zeus-fyi/flows:latest"
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 3010
              protocol: "TCP"
          resources:
            {}
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
