cookbooks/olympus/hestia/info_works/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "info-flows"
  labels:
    app.kubernetes.io/instance: "info-flows"
    app.kubernetes.io/name: "info-flows"
    app.kubernetes.io/managed-by: "zeus"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: "info-flows"
    app.kubernetes.io/name: "info-flows"
