cookbooks/olympus/hestia/info_works/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "info-flows"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: info-flows-tls
      hosts:
        - flows.zeus.fyi
  rules:
    - host: flows.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: info-flows
                port:
                  number: 80
